add document delete range content method
