# src/docs/routes.ts
@@ -4,6 +4,7 @@ import { forward } from "./apis/forward";
 import { batchUpdate } from "./apis/batch-update";
 import { markdownInsert } from "./apis/markdown-insert";
 import { documentStructure } from "./apis/document-structure";
+import { deleteContentRangeRequest } from "./apis/delete-content-range-request";
 
 
 const app = new Hono();
@@ -13,5 +14,6 @@ app.post("/documents", forward);
 app.get("/documents/:documentId/structure", documentStructure);
 app.post("/documents/:documentId/batchUpdate", batchUpdate);
 app.post("/documents/:documentId/markdown/insert", markdownInsert);
+app.post("/documents/:documentId/deleteContentRangeRequest", deleteContentRangeRequest);
 
 export default app;
